Committing Authentications implementation

--- a/Incord/View/Popovers/Avatars.xib
+++ b/Incord/View/Popovers/Avatars.xib
@@ -17,37 +17,42 @@
             <rect key="frame" x="0.0" y="0.0" width="450" height="500"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SsN-Fd-CDZ">
-                    <rect key="frame" x="0.0" y="0.0" width="450" height="500"/>
-                    <clipView key="contentView" copiesOnScroll="NO" id="lZZ-EI-e8g">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="500"/>
+                <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SsN-Fd-CDZ">
+                    <rect key="frame" x="30" y="30" width="390" height="440"/>
+                    <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="lZZ-EI-e8g">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="440"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView id="8hz-Gc-Chm">
-                                <rect key="frame" x="0.0" y="0.0" width="450" height="158"/>
+                            <collectionView selectable="YES" id="8hz-Gc-Chm">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="440"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="n9f-4b-EsE">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="150" height="150"/>
                                 </collectionViewFlowLayout>
-                                <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <color key="primaryBackgroundColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="-2" id="E5G-ie-sx7"/>
+                                    <outlet property="delegate" destination="-2" id="bYk-0l-pC1"/>
+                                </connections>
                             </collectionView>
                         </subviews>
+                        <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </clipView>
                     <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="YnM-93-OiW">
-                        <rect key="frame" x="1" y="483" width="448" height="16"/>
+                        <rect key="frame" x="-100" y="-100" width="448" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Dgn-Hv-Ns0">
-                        <rect key="frame" x="234" y="1" width="15" height="143"/>
+                        <rect key="frame" x="374" y="0.0" width="16" height="440"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="SsN-Fd-CDZ" secondAttribute="bottom" id="Tpx-YN-IgY"/>
-                <constraint firstItem="SsN-Fd-CDZ" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="hYD-3a-Ghz"/>
-                <constraint firstItem="SsN-Fd-CDZ" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="ijk-aw-ezR"/>
-                <constraint firstAttribute="trailing" secondItem="SsN-Fd-CDZ" secondAttribute="trailing" id="raD-nJ-gwa"/>
+                <constraint firstAttribute="bottom" secondItem="SsN-Fd-CDZ" secondAttribute="bottom" constant="30" id="Tpx-YN-IgY"/>
+                <constraint firstItem="SsN-Fd-CDZ" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="30" id="hYD-3a-Ghz"/>
+                <constraint firstItem="SsN-Fd-CDZ" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="30" id="ijk-aw-ezR"/>
+                <constraint firstAttribute="trailing" secondItem="SsN-Fd-CDZ" secondAttribute="trailing" constant="30" id="raD-nJ-gwa"/>
             </constraints>
         </customView>
     </objects>
