Clean up Constants

--- a/Incord/Base.lproj/Main.storyboard
+++ b/Incord/Base.lproj/Main.storyboard
@@ -2907,7 +2907,7 @@
         <scene sceneID="s7R-T1-tHN">
             <objects>
                 <viewController storyboardIdentifier="MismatchVC" id="ECL-94-xMH" customClass="MismatchViewController" customModule="Incord" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" identifier="PasswordVC" id="qyz-HJ-njB">
+                    <view key="view" identifier="MismatchVC" id="qyz-HJ-njB">
                         <rect key="frame" x="0.0" y="0.0" width="550" height="256"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
